--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="hero">
         <div class="logo">VENOM V2</div>
         <p>The most powerful visual execution environment for 2026.</p>
-        <a href="main.exe" class="btn" download>DOWNLOAD NOW</a>
+        <a href="VenomClient.exe" class="btn" download>DOWNLOAD NOW</a>
     </div>
 
     <div class="features">
@@ -39,4 +39,5 @@
         </div>
     </div>
 </body>
+
 </html>
